@@ -14,19 +14,19 @@
 \title{Plotting functions for IsoriX}
 \usage{
 \method{plot}{isoscape}(x, which = "mean", sources = list(draw = TRUE, cex =
-  0.5, pch = 2, lwd = 1, col = "red"), borders = list(borders = NULL, lwd =
-  0.5, col = "black"), mask = list(mask = NULL, lwd = 0, col = "black", fill =
+  0.5, pch = 2, lwd = 1, col = "red"), borders = list(borders = NA, lwd = 0.5,
+  col = "black"), mask = list(mask = NA, lwd = 0, col = "black", fill =
   "black"), palette = list(step = NA, range = c(NA, NA), n.labels = 11, digits
-  = 2, fn = NULL), plot = TRUE, ...)
+  = 2, fn = NA), plot = TRUE, ...)
 
 \method{plot}{isorix}(x, who = "group", what = "pv", cutoff = list(draw =
   TRUE, level = 0.05, col = "#909090"), sources = list(draw = TRUE, cex = 0.5,
   pch = 2, lwd = 1, col = "red"), calib = list(draw = TRUE, cex = 0.5, pch =
-  4, lwd = 1, col = "blue"), borders = list(borders = NULL, lwd = 0.5, col =
-  "black"), mask = list(mask = NULL, lwd = 0, col = "black", fill = "black"),
-  mask2 = list(mask = NULL, lwd = 0, col = "purple", fill = "purple"),
+  4, lwd = 1, col = "blue"), borders = list(borders = NA, lwd = 0.5, col =
+  "black"), mask = list(mask = NA, lwd = 0, col = "black", fill = "black"),
+  mask2 = list(mask = NA, lwd = 0, col = "purple", fill = "purple"),
   palette = list(step = NA, range = c(0, 1), n.labels = 11, digits = 2, fn =
-  NULL), plot = TRUE, ...)
+  NA), plot = TRUE, ...)
 
 \method{plot}{isofit}(x, cex.scale = 0.2, ...)
 
